# GameNative

./: README.md
.github/workflows/: app-release-signed.yml  build-apk.yml  pluvia-pr-check.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: box64_env_vars.json  pulseaudio-gamenative.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/asurfacerenderer/: ASurfaceRendererContext.cpp  drawable.c
app/src/main/cpp/patchelf/: CMakeLists.txt
app/src/main/cpp/proot/: CMakeLists.txt
app/src/main/cpp/virglrenderer/: CMakeLists.txt
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  vulkan_jni.cpp  window.frag  xconnector_epoll.c
app/src/main/res/values/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: game_mode_config.xml
docs/: LAYER_MINIMIZER_DESIGN.md  MUDANCAS_FORK.md  RELATORIO_ENGENHARIA_2026-07-09.md  RELATORIO_REVISAO_2026-07.md  SERVIDOR_GAMENATIVE_ANALISE.md  XODOS_ANALISE.md
(+139 files in other folders)
